Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92167

Adding additional libraries to qt5.git fails

XMLWordPrintable

    • 695276e2c4725d67960aa212043fe1b86c47fe95 (qt/qtdatavis3d/dev) 1d067e8aa9bddd056447aefb5b626b3b0db5ab63 (qt/qtdatavis3d/6.1)

      There seems to be a name conflict: qtdatavis3d qmloscilloscope example has the same name as qtcharts qmloscilloscope. And that is big nono in cmake.

      agent:2021/03/25 10:59:32 build.go:379: CMake Error at qtbase/lib/cmake/Qt6Core/Qt6CoreMacros.cmake:471 (add_executable):
      agent:2021/03/25 10:59:32 build.go:379:   add_executable cannot create target "qmloscilloscope" because another
      agent:2021/03/25 10:59:32 build.go:379:   target with the same name already exists.  The existing target is an
      agent:2021/03/25 10:59:32 build.go:379:   executable created in source directory
      agent:2021/03/25 10:59:32 build.go:379:   "/home/qt/work/qt/qt5/qtcharts/examples/charts/qmloscilloscope".  See
      agent:2021/03/25 10:59:32 build.go:379:   documentation for policy CMP0002 for more details.
      

      Details: http://coin-master.ci.qt.io/coin/integration/qt/qt5/tasks/1616668843
      Build log: http://coin-master.ci.qt.io/coin/api/results/qt/qt5/0e1d9f5596f9f24490e7af177db86c1f2f108d18/MacOSMacOS_11_00x86_64MacOSMacOS_11_00x86_64Clangqtci-macos-11.0-x86_64-102-d06011Sccache/327e29a4c3cce72ac47c32042b0e689515fae7b6/build_1616670020/log.txt.gz

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes