Rename qmloscilloscope

There was a naming conflict with QtCharts
qmloscilloscope example, so this is now
renamed as qml3doscilloscope

Fixes: QTBUG-92167
Change-Id: I657d9737c39b0680aabc6b7c00ebe04351643502
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>
(cherry picked from commit 695276e2c4725d67960aa212043fe1b86c47fe95)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>